--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": "Lucas Hrabovsky <lucas@ex.fm>",
-  "name": "node-nurse",
+  "name": "nurse",
   "description": "Standardized health checker for all our services",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "homepage": "http://github.com/exfm/node-nurse",
   "repository": {
     "type": "git",
@@ -13,8 +13,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "mocha": "1.4.1",
-    "chai": "1.2.0"
+    "mocha": "1.6.0"
   },
   "optionalDependencies": {},
   "engines": {
